# ruvos

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  progress.md  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/ruflo-cli/: Cargo.toml
crates/ruflo-cli/src/: lib.rs  main.rs
crates/ruflo-cli/src/commands/: init.rs  mcp.rs  mod.rs
crates/ruflo-cli/src/dispatch/: mod.rs
crates/ruflo-hooks/: Cargo.toml
crates/ruflo-hooks/src/: handlers.rs  lib.rs  pre.rs  queue.rs  sona_bridge.rs  types.rs
crates/ruflo-host/: Cargo.toml
crates/ruflo-mcp/: Cargo.toml
crates/ruflo-mcp/src/: error.rs  lib.rs  protocol.rs  server.rs
crates/ruflo-mcp/src/tools/: agent.rs  echo.rs  gov.rs  handler.rs  hooks.rs  intel.rs  memory.rs  mod.rs  plugin.rs  session.rs  workflow.rs
crates/ruflo-mcp/tests/: integration_test.rs
crates/ruflo-plugin-host/: Cargo.toml
crates/ruflo-plugin-host/src/: discover.rs  discovery.rs  error.rs  executor.rs  lib.rs  manifest.rs  parser.rs  types.rs
crates/ruflo-plugin-host/src/registry/: mod.rs
crates/ruflo-plugin-host/tests/: discover_test.rs  manifest_test.rs  parser_test.rs
crates/ruflo-session/: Cargo.toml
crates/ruvos-cli/: Cargo.toml
crates/ruvos-cli/src/: cli.rs  lib.rs  main.rs
crates/ruvos-cli/src/commands/: compress.rs  contracts.rs  cve.rs  doctor.rs  eval.rs  hook.rs  init.rs  init_hooks.rs  mcp.rs  mod.rs  plugin.rs  skills.rs  status.rs
crates/ruvos-cli/tests/: client_scope.rs  cve.rs  eval.rs  no_headroom.rs
crates/ruvos-compress/: Cargo.toml
crates/ruvos-compress/benches/: compress_baseline.rs
crates/ruvos-compress/src/: ccr.rs  defaults.rs  detect.rs  eval.rs  json.rs  lib.rs  pipeline.rs  text.rs
crates/ruvos-cve-lite/: Cargo.toml
crates/ruvos-hooks/: Cargo.toml
crates/ruvos-host/: Cargo.toml
crates/ruvos-host/src/: host.rs  lib.rs
crates/ruvos-host/tests/: adapter_tests.rs
crates/ruvos-mcp/: Cargo.toml
crates/ruvos-mcp/.ruvos/: agents.json  memory.json
crates/ruvos-mcp/.ruvos/agents/b2283eae-c40c-416e-a999-d266da3ec326/: output.md
crates/ruvos-mcp/.ruvos/rvf/: 1c708cb3-7186-4441-88da-ec4e21b6d845.rvf  25ac3c6a-9c7d-4e30-a574-be63cfff3690.rvf  3813020d-d474-4368-a537-f4d2d71663fc.rvf  66138c84-d210-4df0-9a51-7e4fbe1612fd.rvf  6a129141-a9f2-474e-9d58-dbb6dc5dbdda.rvf  6c4c54cf-37c2-40d3-a1e3-67cfffbc998a.rvf  a80510c5-14ac-4353-93ca-8a163e8a95f5.rvf  ac8b7357-fffb-47f6-8910-4b2e982bb6f5.rvf  b1c8e708-c02f-4dd8-9d88-c86cb5822ecb.rvf  bb652d94-df68-4aab-9c71-4aa40df48e72.rvf
crates/ruvos-mcp/src/: compress_learning.rs  constants.rs  daemon.rs  error.rs  lib.rs  llm.rs  llm_router.rs  math.rs  paths.rs  protocol.rs  rate_limiter.rs  relay.rs  runtime.rs  safety.rs  sandbox.rs  server.rs  server_rmcp.rs  skills.rs  store.rs  swarm.rs  task_queue.rs
crates/ruvos-mcp/src/eval/: mod.rs  orchestrate.rs  skill_routing.rs  swarm_learning.rs  swarm_recovery.rs
crates/ruvos-mcp/src/llm_router/: config.rs  mod.rs  router.rs
crates/ruvos-mcp/src/tools/: agent.rs  agent_exec.rs  agent_store.rs  aisp_layer.rs  auto_swarm.rs  compress.rs  cve.rs  echo.rs  embedding.rs  gov.rs  gov_issues.rs  gov_sprint.rs  handler.rs  hooks.rs  hooks_route.rs  intel.rs  memory.rs  mod.rs  orchestrate.rs  orchestrate_plan.rs  plugin.rs  relay.rs  retrieval.rs  server_reload.rs  session.rs  swarm.rs  swarm_dep_tests.rs  workflow.rs
crates/ruvos-mcp/src/tools/agent/: artifact.rs  handlers.rs  mod.rs  task.rs  tests_aisp.rs  tests_orch.rs  transport.rs
crates/ruvos-mcp/tests/: integration_test.rs  math.rs  plugin_integration_test.rs
crates/ruvos-plugin-host/: Cargo.toml
crates/ruvos-plugin-host/src/: discover.rs  discovery.rs  executor.rs  install.rs  lib.rs  parser.rs  types.rs
crates/ruvos-plugin-host/tests/: discover_test.rs  executor_test.rs  manifest_test.rs  parser_test.rs
crates/ruvos-session/: Cargo.toml
crates/ruvos-session/src/: compress.rs  fork.rs  lib.rs  rvf.rs  verify.rs
docs/: adr-015-agent-execution-bridge.md  gap-register.md  rewrite-summary.md  ruflo-ruvector-integration-rationale.md  ruflo-ruvector-integration-workflow.html
docs/contracts/: README.md  contract-manifest.json
docs/roadmaps/: agentic-os-eval-harness.md  agentic-os-roadmap.md  compress-baseline-checklist.md  compress-implementation-map.md  compress-preservation-report.md  headroom-recode-plan.md  swarm-layer-strategy.md
docs/skills/: audit.md  redb-pack.md  selected-300-ruvos.json  selected-300-ruvos.md  selected-300.md
docs/spec/: adr-001-persistence-and-internal-tasks.md  adr-002-relay-cross-instance-coordination.md  (+42 more)
scripts/: check-max-lines.sh  cleanup-v3-cutover.sh  test-multiagent-openrouter.sh
substrate/rulake/: Cargo.toml
substrate/rulake/benches/: kernel_l2.rs
substrate/rulake/src/: cache.rs  kernel.rs  lake.rs  lib.rs
substrate/rulake/tests/: federation_smoke.rs  kernel_conformance.rs
substrate/ruv-swarm-persistence/: Cargo.toml
substrate/ruv-swarm-persistence/src/: memory.rs  sqlite.rs
substrate/ruv-swarm-persistence/src/tests/: concurrent_tests.rs  mod.rs  property_tests.rs  query_tests.rs  security_tests.rs  storage_tests.rs  test_utils.rs  transaction_tests.rs
substrate/ruv-swarm-transport/: Cargo.toml
substrate/ruv-swarm-transport/benches/: transport_benchmarks.rs
substrate/ruv-swarm-transport/src/: in_process.rs  lib.rs  shared_memory.rs  websocket.rs
substrate/ruv-swarm-transport/tests/: integration_test.rs
substrate/ruvos-memory-graph/: Cargo.toml
substrate/ruvos-memory-graph/src/: edge.rs  extract.rs  graph.rs  graph_embed.rs  lib.rs  node.rs  persist.rs
substrate/ruvos-safety/: Cargo.toml
substrate/ruvos-safety/src/: engine.rs  lib.rs  persist.rs  tests.rs  types.rs
substrate/ruvos-skills/: Cargo.toml
substrate/ruvos-skills/src/: lib.rs  records.rs  store.rs
substrate/ruvos-store/: Cargo.toml
substrate/ruvos-store/src/: lib.rs  records.rs  snapshot.rs  store.rs
substrate/ruvos-store/tests/: store_tests.rs
substrate/rvf-cli/: Cargo.toml
(+87 files in other folders)
