[workspace]
resolver = "2"
# Phase 1: Integrated workspace with 6 Ruflo + 18 curated RuVector substrate crates
# (9 essential for Phase 2-5 + 9 optional for Phase 5+). 11 dropped crates: clustering (raft, replication, cluster),
# LLM (ruvllm), variants (acorn), and runtime targets (ebpf, kernel, wasm, node, server, federation, launch).
members = [
    "crates/ruflo-cli",
    "crates/ruflo-mcp",
    "crates/ruflo-host",
    "crates/ruflo-plugin-host",
    "crates/ruflo-hooks",
    "crates/ruflo-session",
    # 9 Essential RuVector crates (Phases 2-5)
    "substrate/mcp-brain",
    "substrate/ruvector-core",
    "substrate/ruvector-math",
    "substrate/sona",
    "substrate/rvf-types",
    "substrate/rvf-wire",
    "substrate/rvf-manifest",
    "substrate/rvf-crypto",
    "substrate/rvf-cli",
    # 9 Optional RuVector crates (Phase 5+)
    "substrate/ruvector-rabitq",
    "substrate/rvf-quant",
    "substrate/rvf-index",
    "substrate/rvf-runtime",
    "substrate/rvf-import",
]
default-members = [
    "crates/ruflo-cli",
    "crates/ruflo-mcp",
    "crates/ruflo-host",
    "crates/ruflo-plugin-host",
    "crates/ruflo-hooks",
    "crates/ruflo-session",
]

[workspace.package]
version = "4.0.0-rc.1"
edition = "2021"
rust-version = "1.77"
license = "MIT"
authors = ["rUvOS contributors"]
repository = "https://github.com/dgdev25/ruvos"

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam = "0.8"
dashmap = "5.5"
futures = "0.3"
futures-core = "0.3"
hnsw_rs = "0.3.4"
memmap2 = "0.9"
mockall = "0.12"
ndarray = { version = "0.15", features = ["serde"] }
once_cell = "1.19"
parking_lot = "0.12"
proptest = "1.4"
rand = { version = "0.8", features = ["std", "std_rng"] }
rand_core = "0.6"
rand_distr = { version = "0.4", default-features = false }
rayon = "1.10"
redb = "2.0"
rkyv = { version = "0.7", features = ["validation"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simsimd = "4.3"
thiserror = "2.0"
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"
