[workspace]
resolver = "2"
# Integrated workspace: 6 rUvOS crates + curated RuVector substrate.
# Held back (NOT members, intentionally): runtime-target crates that need special
# toolchains (rvf-wasm, rvf-solver-wasm, rvf-ebpf, rvf-node, rvf-kernel), the local
# LLM serving runtime (ruvllm — pulls candle/hf-hub; deferred to v2 per the v1
# no-local-inference decision), and rvf-adapters (a folder of external-system adapters).
members = [
    "crates/ruvos-cli",
    "crates/ruvos-mcp",
    "crates/ruvos-host",
    "crates/ruvos-plugin-host",
    "crates/ruvos-hooks",
    "crates/ruvos-session",
    # 9 Essential RuVector crates (Phases 2-5)
    "substrate/mcp-brain",
    "substrate/ruvector-core",
    "substrate/ruvector-math",
    "substrate/sona",
    "substrate/rvf-types",
    "substrate/rvf-wire",
    "substrate/rvf-manifest",
    "substrate/rvf-crypto",
    "substrate/rvf-cli",
    # 9 Optional RuVector crates (Phase 5+)
    "substrate/ruvector-rabitq",
    "substrate/rvf-quant",
    "substrate/rvf-index",
    "substrate/rvf-runtime",
    "substrate/rvf-import",
    # Integrated from rUvnet ecosystem (self-contained, zero external refs)
    "substrate/rulake",
    "substrate/ruv-swarm-transport",
    # Temporal knowledge graph
    "substrate/ruvos-memory-graph",
    # Behavioral safety guardrails and adaptive boundaries
    "substrate/ruvos-safety",
    # Pure-Rust redb store + signed .rvf snapshots (replaces SQLite persistence)
    "substrate/ruvos-store",
    # Predicate-agnostic filtered HNSW (ACORN) — native, no external inference
    "substrate/ruvector-acorn",
    # Vector DB + neural routing inference engine (native)
    "substrate/ruvector-router-core",
    # Distributed clustering / consensus / replication (native, tokio-based)
    "substrate/ruvector-cluster",
    "substrate/ruvector-raft",
    "substrate/ruvector-replication",
    # Federated transfer learning — PII strip + differential privacy (native)
    "substrate/rvf-federation",
    # Goal-Oriented Action Planning (A*) — extracted from ARCADIA (ADR-004)
    "substrate/ruvos-goap",
]
default-members = [
    "crates/ruvos-cli",
    "crates/ruvos-mcp",
    "crates/ruvos-host",
    "crates/ruvos-plugin-host",
    "crates/ruvos-hooks",
    "crates/ruvos-session",
]

[workspace.package]
version = "4.0.0-rc.1"
edition = "2021"
rust-version = "1.77"
license = "MIT"
authors = ["rUvOS contributors"]
repository = "https://github.com/dgdev25/ruvos"

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam = "0.8"
dashmap = "5.5"
futures = "0.3"
futures-core = "0.3"
hnsw_rs = "0.3.4"
memmap2 = "0.9"
mockall = "0.12"
ndarray = { version = "0.15", features = ["serde"] }
once_cell = "1.19"
parking_lot = "0.12"
proptest = "1.4"
rand = { version = "0.8", features = ["std", "std_rng"] }
rand_core = "0.6"
rand_distr = { version = "0.4", default-features = false }
rayon = "1.10"
redb = "2.0"
rkyv = { version = "0.7", features = ["validation"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simsimd = "4.3"
thiserror = "2.0"
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"
