[workspace]
resolver = "2"
# Integrated workspace: rUvOS crates + the substrate crates they actually consume.
# Held back (NOT members, intentionally):
# - runtime-target crates needing special toolchains (rvf-wasm, rvf-solver-wasm,
#   rvf-ebpf, rvf-node, rvf-kernel), ruvllm (candle/hf-hub; deferred to v2),
#   rvf-adapters (external-system adapters)
# - crates with no member consumers, removed from CI per the audit of 2026-06-12
#   (delete-not-defer; re-add when a member actually depends on them):
#   mcp-brain, ruvector-cluster, ruvector-math, ruvector-raft,
#   ruvector-replication, ruvector-router-core, rvf-federation, rvf-index,
#   rvf-cli, rvf-import, rvf-quant, rvf-runtime, rvf-manifest, rvf-wire
members = [
    "crates/ruvos-compress",
    "crates/ruvos-cve-lite",
    "crates/ruvos-cli",
    "crates/ruvos-mcp",
    "crates/ruvos-host",
    "crates/ruvos-plugin-host",
    "crates/ruvos-hooks",
    "crates/ruvos-session",
    # Vector substrate
    "substrate/ruvector-core",
    "substrate/sona",
    "substrate/ruvector-rabitq",
    # .rvf container types + signing (consumed by ruvos-session / ruvos-store)
    "substrate/rvf-types",
    "substrate/rvf-crypto",
    # Integrated from rUvnet ecosystem (self-contained, zero external refs)
    "substrate/rulake",
    "substrate/ruv-swarm-transport",
    # Temporal knowledge graph
    "substrate/ruvos-memory-graph",
    # Portable redb-backed skills pack
    "substrate/ruvos-skills",
    # Behavioral safety guardrails and adaptive boundaries
    "substrate/ruvos-safety",
    # Pure-Rust redb store + signed .rvf snapshots (replaces SQLite persistence)
    "substrate/ruvos-store",
    # Predicate-agnostic filtered HNSW (ACORN) — native, no external inference
    "substrate/ruvector-acorn",
    # Goal-Oriented Action Planning (A*) — extracted from ARCADIA (ADR-004)
    "substrate/ruvos-goap",
    # Lean conditional-edge DAG executor — modeled on graph-flow (ADR-007)
    "substrate/ruvos-graphflow",
    # Inflight stream analysis (DTW + drift) — vendored from midstream (ADR-008)
    "substrate/ruvos-stream",
]
default-members = [
    "crates/ruvos-compress",
    "crates/ruvos-cve-lite",
    "crates/ruvos-cli",
    "crates/ruvos-mcp",
    "crates/ruvos-host",
    "crates/ruvos-plugin-host",
    "crates/ruvos-hooks",
    "crates/ruvos-session",
]

[workspace.package]
version = "4.0.0-rc.1"
edition = "2021"
rust-version = "1.89" # std file locking (File::lock) used by ruvos-mcp paths::lock_store
license = "MIT"
authors = ["rUvOS contributors"]
repository = "https://github.com/dgdev25/ruvos"

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam = "0.8"
dashmap = "5.5"
futures = "0.3"
futures-core = "0.3"
hnsw_rs = "0.3.4"
memmap2 = "0.9"
mockall = "0.12"
ndarray = { version = "0.15", features = ["serde"] }
once_cell = "1.19"
parking_lot = "0.12"
proptest = "1.4"
rand = { version = "0.8", features = ["std", "std_rng"] }
rand_core = "0.6"
rand_distr = { version = "0.4", default-features = false }
rayon = "1.10"
redb = "2.0"
rkyv = { version = "0.7", features = ["validation"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simsimd = "4.3"
thiserror = "2.0"
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"
