[package]
name = "ruvos-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "ruvos"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { workspace = true }
ruvos-mcp = { path = "../ruvos-mcp" }
ruvos-skills = { path = "../../substrate/ruvos-skills" }
ruvos-session = { path = "../ruvos-session" }
compress = { path = "../ruvos-compress" }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
