[package]
name = "ruvos-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
# The lib has zero doc examples. Running its (empty) doctest harness under a
# combined `cargo test --workspace` invocation trips a cargo workspace-doctest
# bug: rustdoc resolves ruvos-mcp's transitive deps from the shared target
# deps/ dir, picks a cfg(test) variant, and fails with E0463 on ruvos_mcp —
# even though the rlib exists and `cargo test --workspace --doc` passes alone.
# ruvos-cli is the only ruvos-mcp dependent, so disabling its empty doctest
# harness makes `cargo test --workspace` clean. Re-enable if real doctests are
# added here.
doctest = false

[[bin]]
name = "ruvos"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { workspace = true }
ruvos-mcp = { path = "../ruvos-mcp" }
ruvos-skills = { path = "../../substrate/ruvos-skills" }
ruvos-session = { path = "../ruvos-session" }
compress = { path = "../ruvos-compress" }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }
ruvos-cve-lite = { path = "../ruvos-cve-lite" }
ruvos-plugin-host = { path = "../ruvos-plugin-host" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tempfile = "3"

[dev-dependencies]
tar = "0.4"
flate2 = "1.0"
