[package]
name = "ruvos-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
anyhow = "1.0"
chrono.workspace = true
lazy_static = "1.4"
ruvos-plugin-host = { path = "../ruvos-plugin-host" }
ruvos-hooks = { path = "../ruvos-hooks" }

[dev-dependencies]
tokio = { version = "1.40", features = ["macros"] }
