[package]
name = "ruvos-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
anyhow = "1.0"
chrono.workspace = true
lazy_static = "1.4"
ruvos-plugin-host = { path = "../ruvos-plugin-host" }
ruvos-hooks = { path = "../ruvos-hooks" }
ruvos-session = { path = "../ruvos-session" }
compress = { path = "../ruvos-compress" }
ruvos-safety = { path = "../../substrate/ruvos-safety" }
ruvos-host = { path = "../ruvos-host" }
ruvector-core = { path = "../../substrate/ruvector-core", default-features = false, features = ["hnsw", "storage"] }
ruvector-rabitq = { path = "../../substrate/ruvector-rabitq" }
ruvector-acorn = { path = "../../substrate/ruvector-acorn" }
ruvos-goap = { path = "../../substrate/ruvos-goap" }
ruvos-graphflow = { path = "../../substrate/ruvos-graphflow" }
ruvos-stream = { path = "../../substrate/ruvos-stream" }
ruvector-sona = { path = "../../substrate/sona" }
rulake = { path = "../../substrate/rulake" }
ruv-swarm-transport = { path = "../../substrate/ruv-swarm-transport" }
ruvos-store = { path = "../../substrate/ruvos-store" }
ruvos-memory-graph = { path = "../../substrate/ruvos-memory-graph" }
ruvos-skills = { path = "../../substrate/ruvos-skills" }
ruvos-cve-lite = { path = "../ruvos-cve-lite" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tokio = { version = "1.40", features = ["macros"] }
tempfile = "3"
