[package]
name = "ruvos-plugin-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

[dev-dependencies]
tempfile = "3.8"
