[package]
name = "ruvos-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
tracing = "0.1"
anyhow = "1.0"
chrono = { workspace = true }
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
rvf-crypto = { path = "../../substrate/rvf-crypto" }

[dev-dependencies]
tempfile = "3"
