[package]
name = "ruvos-store"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "Pure-Rust redb-backed store with signed .rvf snapshots for rUvOS"

[dependencies]
redb = "2.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rvf-crypto = { path = "../rvf-crypto" }

[dev-dependencies]
tempfile = "3"
